--- a/main.css
+++ b/main.css
@@ -4,6 +4,16 @@ body{
     margin: 0px;
 
 }
+
+@media (min-width: 768px) and (max-width: 1024px){
+    h1, h2, h3, p{
+        font-size: 5vh;
+    }
+    .card_item p {
+        font-size: 60%;
+    }
+
+}
 .container{
     margin: 0 auto;
 }
@@ -74,6 +84,7 @@ h1{
     display: flex;
 }
 .block .declaration{
+    flex: 1;
     /*width: 100%;*/
 
 }
@@ -93,7 +104,7 @@ h1{
     display: block;
     width: 240px;
     padding: 20px 0;
-    margin: 59px auto 0 auto;
+    margin: 59px auto 30px auto;
     text-decoration: none;
     text-align: center;
 
@@ -101,11 +112,15 @@ h1{
     font-size: 18px;
 
 }
-.block img{
-    /*width: 100%;*/
-    flex: 1 0 auto;
-
+.block_image{
+    background: url("./image/Rectangle 2.png") no-repeat center top/cover;
+    flex:1
 }
+/*.block img{*/
+/*     !*width: 100%;*!*/
+/*     flex: 1 0 auto;*/
+
+/* }*/
 
 .card{
     background: #CECECE;
@@ -188,8 +203,105 @@ h1{
     color: white;
     font-size: 25px;
 }
+.feature>*{
+    margin: 0;
+    text-align: center;
+    }
+.feature{
+    padding: 102px 100px 98px 100px;
+    background: #CECECE;
+}
+.feature h3{
+    margin-bottom: 30px;
+    color: #000000;
+    font-size: 75px;
+}
+.feature p{
+    font-size: 25px;
+    color: #545454;
+}
 
 
+/*feature_projects*/
+
+.project{
+    display: flex;
+}
+
+@media (max-width: 768px) {
+    .project{
+        display: block;
+        flex-direction: column;
+    }
+    .feature_projects_image{
+        padding: 50%;
+    }
+
+
+}
+@media(min-width: 768px) and (max-width: 1024px){
+    .project{
+        display: flex;
+        flex-direction: row;
+    }
+    .feature_projects_image{
+        flex-shrink: 1;
+    }
+
+}
+
+.feature_projects .declaration{
+    flex: 1;
+
+  }
+.feature_projects .title_first{
+    color: #000000;
+    font-size: 50px;
+    margin-top: 130px;
+    text-align: left;
+}
+.feature_projects h2{
+    color:#707070;
+    font-size: 16px;
+}
+.feature_projects .button{
+    background: #325DFF;
+    color:#fff;
+    border-radius: 36px;
+    display: block;
+    width: 240px;
+    padding: 20px 0;
+    margin: 59px 252px 84px 66px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+
+}
+.project:nth-child(1) .feature_projects_image{
+    background: url("./image/Rectangle 10.png") no-repeat center top/cover;
+    /*flex:1;*/
+   flex:1;
+}
+.project:last-child .feature_projects_image{
+    background: url("./image/Rectangle 14.png") no-repeat center top/cover;
+    flex:1
+}
+.project:nth-child(even) .feature_projects_image{
+    background: url("./image/Rectangle 11.png") no-repeat center top/cover;
+    flex:1
+}
+footer{
+    background: #325DFF;
+    border-top: #325DFF 1px solid;
+}
+footer p{
+    margin: 0;
+    padding-top: 58px;
+    padding-bottom: 58px;
+    text-align: center;
+    color: #FFFFFF;
+    font-size: 20px;
+}
 /*}*/
 /*.card{*/
 /*    border: black solid 2px;*/
